# toolfactory

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  MVP-spec-v1.yaml  README.md  build_yxi.yaml  pyproject.toml  spec.yaml  toolfactory.catalog.json  toolfactory.compatibility.json  toolfactory.config.json  toolfactory.governance.json  toolfactory.template-manifest.json
.agents/plugins/: marketplace.json
.agents/skills/generate-tool-docs/: SKILL.md
.agents/skills/maintain-existing-alteryx-tool/: SKILL.md
.agents/skills/maintain-tool-catalog/: SKILL.md
.agents/skills/package-yxi/: SKILL.md
.agents/skills/scaffold-and-validate-alteryx-tool/: SKILL.md
.agents/skills/scaffold-new-alteryx-tool/: SKILL.md
.agents/skills/troubleshoot-build-or-packaging-failure/: SKILL.md
.agents/skills/upgrade-sdk-dependencies/: SKILL.md
.codex-plugin/: plugin.json
.github/workflows/: build-yxi.yml  release-yxi.yml
docs/agent/: quick-read.md
docs/checkpoint/: 20260331-data-obfuscator-harness-issues.md
docs/reference/: README.md
schemas/: catalog.schema.json  compatibility.schema.json  tool-intent.schema.json  tool-spec.schema.json  validation-spec.schema.json
templates/tool-skeleton/: .gitignore  README.md  tool.yaml
templates/validation-skeleton/: README.md  validation.json
tests/: test_policy.py  test_validation.py  test_workspace.py
toolsmith/: __main__.py  bootstrap.py  catalog.py  cli.py  compat.py  compatibility.py  config.py  governance.py  intent.py  maintenance.py  policy.py  pythonpack.py  spec.py  validation.py  workspace.py
(+7 files in other folders)
